--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   style="width: 100%; height: 100%; border: none;
   frameborder="0" 
   scrolling="no" 
-  src="https://peacocksnet-my.sharepoint.com/personal/david_garcia_peacocks_net/_layouts/15/Doc.aspx?sourcedoc={c81672b4-1dd1-4fd3-a9ef-95a299f64b2b}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&wdHideGridlines=True&wdHideHeaders=True&wdInConfigurator=True&wdInConfigurator=True">
-</iframe>
+src="https://peacocksnet-my.sharepoint.com/personal/david_garcia_peacocks_net/_layouts/15/Doc.aspx?sourcedoc={c81672b4-1dd1-4fd3-a9ef-95a299f64b2b}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&ActiveCell='Measurements'!C5&wdHideHeaders=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 
 </html>
