--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<iframe 
-  style="width: 100%; height: 700px; border: none;
-  frameborder="0" 
-  scrolling="no" 
-src="https://peacocksnet-my.sharepoint.com/personal/david_garcia_peacocks_net/_layouts/15/Doc.aspx?sourcedoc={c81672b4-1dd1-4fd3-a9ef-95a299f64b2b}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&ActiveCell='Measurements'!C5&wdHideHeaders=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+ 
+  <!-- Replace the src in the iframe below with the embed link you got from OneDrive. -->
+<iframe width="100" height="700" frameborder="0" scrolling="no" src="https://peacocksnet-my.sharepoint.com/personal/david_garcia_peacocks_net/_layouts/15/Doc.aspx?sourcedoc={c81672b4-1dd1-4fd3-a9ef-95a299f64b2b}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&ActiveCell='Measurements'!C5&wdHideHeaders=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
+
 
 </html>
